--- a/web/resources/css/local.css
+++ b/web/resources/css/local.css
@@ -342,7 +342,23 @@ hr {
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.1;
+  color: #ffffff;
+}
 h1 small,
 h2 small,
 h3 small,
@@ -5416,17 +5432,29 @@ button.close {
 }
 .carousel {
   position: relative;
+  display: block;
+  height: 129px;
+  border-radius: 5px;
+  margin-left: -15px;
+  margin-right: -15px;
+  color: #000000;
+  font-size: 15px;
+  background: rgba(255, 255, 255, .875);
+}
+.carousel-content {
+  display: block;
+  height: 130px;
 }
 .carousel-inner {
   position: relative;
   overflow: hidden;
-  width: 100%;
+  width: 94%;
+  margin: auto;
 }
 .carousel-inner > .item {
   display: none;
   position: relative;
-  -webkit-transition: 0.6s ease-in-out left;
-  transition: 0.6s ease-in-out left;
+
 }
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
@@ -5775,8 +5803,8 @@ legend {
   border-bottom-color: #2a9fd6;
 }
 .nav .open > a .caret {
-    border-top-color: #fff;
-    border-bottom-color: #fff;
+  border-top-color: #fff;
+  border-bottom-color: #fff;
 }
 .nav-tabs a,
 .nav-pills a,
@@ -5957,71 +5985,71 @@ table.tablesorter thead tr th:hover {
   /* Wrappers */
 
   #wrapper {
-	padding-left: 225px;
+    padding-left: 225px;
   }
 
   #page-wrapper {
-	padding: 15px 25px;
+    padding: 15px 25px;
   }
 
   /* Side Nav */
 
   .side-nav {
-	margin-left: -225px;
-	left: 225px;
-	width: 225px;
-	position: fixed;
-	top: 50px;
-	height: 100%;
-	border-radius: 0;
-	/*border: none;*/
+    margin-left: -225px;
+    left: 225px;
+    width: 225px;
+    position: fixed;
+    top: 50px;
+    height: 100%;
+    border-radius: 0;
+    /*border: none;*/
     border-right: 1px solid #bdbdbd;
-	/*background-color: #222222;*/
-	overflow-y: auto;
+    /*background-color: #222222;*/
+    overflow-y: auto;
   }
 
   /*menu overrides*/
   .side-nav>li.dropdown>ul.dropdown-menu {
-	position: relative;
-	min-width: 225px;
-	margin: 0;
-	padding: 0;
-	border: none;
-	border-radius: 0;
-	background-color: transparent;
-	box-shadow: none;
-	-webkit-box-shadow: none;
+    position: relative;
+    min-width: 225px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+    box-shadow: none;
+    -webkit-box-shadow: none;
   }
 
   .side-nav>li.dropdown>ul.dropdown-menu>li>a {
-	color: #999999;
-	padding: 15px 15px 15px 25px;
+    color: #999999;
+    padding: 15px 15px 15px 25px;
   }
 
   .side-nav>li.dropdown>ul.dropdown-menu>li>a:hover,
   .side-nav>li.dropdown>ul.dropdown-menu>li>a.active,
   .side-nav>li.dropdown>ul.dropdown-menu>li>a:focus {
-	color: #fff;
-	background-color: #080808;
+    color: #fff;
+    background-color: #080808;
   }
 
   .side-nav>li>a {
-	width: 225px;
+    width: 225px;
   }
 
   .navbar-inverse .navbar-nav>li>a:hover,
   .navbar-inverse .navbar-nav>li>a:focus {
-	background-color: #080808;
+    background-color: #080808;
   }
 
   /* Nav Messages */
 
   .messages-dropdown .dropdown-menu {
-	min-width: 300px;
+    min-width: 300px;
   }
 
   .messages-dropdown .dropdown-menu li a {
-	white-space: normal;
+    white-space: normal;
   }
 
   .navbar-collapse {
@@ -6032,269 +6060,348 @@ table.tablesorter thead tr th:hover {
 }
 
 .divider-vertical {
-    border-right: 1px solid #eee;
-    height: 50px;
-    margin: 0 9px;
-    overflow: hidden;
-    width: 1px;
+  border-right: 1px solid #eee;
+  height: 50px;
+  margin: 0 9px;
+  overflow: hidden;
+  width: 1px;
 }
 .navbar-search
 {
-    padding-right: 27px;
-    padding-top: 7px;
+  padding-right: 27px;
+  padding-top: 7px;
 }
 
 /*Feed*/
 
 .feed-item:before, .feed-item:after {
-    content: " ";
-    display: block;
-    height: 11px;
+  content: " ";
+  display: block;
+  height: 11px;
 }
 .feed-item .icon {
-    color: #FFFFFF;
-    font-size: 16px;
-    height: 28px;
-    line-height: 28px;
-    padding-left: 11px;
-    position: relative;
-    text-align: center;
-    vertical-align: middle;
-    width: 28px;
-    z-index: 1;
+  color: #FFFFFF;
+  font-size: 16px;
+  height: 28px;
+  line-height: 28px;
+  padding-left: 11px;
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+  width: 28px;
+  z-index: 1;
 }
 .pull-left {
-    float: left;
+  float: left;
 }
 .feed-item-body {
-    margin-left: 40px;
-    padding-top: 3px;
-    vertical-align: bottom;
+  margin-left: 40px;
+  padding-top: 3px;
+  vertical-align: bottom;
 }
 .feed-item-body .time {
-    color: #D2D2D2;
-    font-size: 11.05px;
-    line-height: 1.5em;
+  color: #D2D2D2;
+  font-size: 11.05px;
+  line-height: 1.5em;
 }
 .feed
 {
-    height: 430px;
-    overflow: hidden;
-    position: relative;
-    width: auto;
-    color: #F8F8F8;
+  height: 430px;
+  overflow: hidden;
+  position: relative;
+  width: auto;
+  color: #F8F8F8;
 }
 
 .news-list,.server-stats {
-    list-style: none outside none;
-    padding-left: 0;
+  list-style: none outside none;
+  padding-left: 0;
 }
 
 .news-list img, .news-list .icon, .users-list img, .users-list .icon {
-    float: left;
-    height: 50px;
-    width: 50px;
-    margin-right: 20px;
+  float: left;
+  height: 50px;
+  width: 50px;
+  margin-right: 20px;
 }
 .news-list li, .users-list li {
-    -moz-box-sizing: content-box;
-    border-top: 1px solid rgba(51, 51, 51, 0.25);
-    cursor: pointer;
-     height: 67px;
+  -moz-box-sizing: content-box;
+  border-top: 1px solid rgba(51, 51, 51, 0.25);
+  cursor: pointer;
+  height: 67px;
 
-    padding-bottom: 12px;
-    transition: background-color 0.2s ease-out 0s;
+  padding-bottom: 12px;
+  transition: background-color 0.2s ease-out 0s;
 }
 
 .selected {
-    border-left:7px solid #2A9FD6;
+  border-left:7px solid #2A9FD6;
 }
 
- .timeline {
-            list-style: none;
-            padding: 20px 0 20px;
-            position: relative;
- }
-
-            .timeline:before {
-                top: 0;
-                bottom: 0;
-                position: absolute;
-                content: " ";
-                width: 3px;
-                background-color: #eeeeee;
-                left: 50%;
-                margin-left: -1.5px;
-            }
-
-            .timeline > li {
-                margin-bottom: 20px;
-                position: relative;
-            }
-
-                .timeline > li:before,
-                .timeline > li:after {
-                    content: " ";
-                    display: table;
-                }
-
-                .timeline > li:after {
-                    clear: both;
-                }
-
-                .timeline > li:before,
-                .timeline > li:after {
-                    content: " ";
-                    display: table;
-                }
-
-                .timeline > li:after {
-                    clear: both;
-                }
-
-                .timeline > li > .timeline-panel {
-                    width: 46%;
-                    float: left;
-                    border: 1px solid #d4d4d4;
-                    border-radius: 2px;
-                    padding: 20px;
-                    position: relative;
-                    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-                    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-                }
-
-                    .timeline > li > .timeline-panel:before {
-                        position: absolute;
-                        top: 26px;
-                        right: -15px;
-                        display: inline-block;
-                        border-top: 15px solid transparent;
-                        border-left: 15px solid #ccc;
-                        border-right: 0 solid #ccc;
-                        border-bottom: 15px solid transparent;
-                        content: " ";
-                    }
-
-                    .timeline > li > .timeline-panel:after {
-                        position: absolute;
-                        top: 27px;
-                        right: -14px;
-                        display: inline-block;
-                        border-top: 14px solid transparent;
-                        border-left: 14px solid #fff;
-                        border-right: 0 solid #fff;
-                        border-bottom: 14px solid transparent;
-                        content: " ";
-                    }
-
-                .timeline > li > .timeline-badge {
-                    border:3px solid white;
-                    color: #fff;
-                    width: 50px;
-                    height: 50px;
-                    line-height: 50px;
-                    font-size: 1.4em;
-                    text-align: center;
-                    position: absolute;
-                    top: 16px;
-                    left: 50%;
-                    margin-left: -25px;
-                    background-color: #999999;
-                    z-index: 100;
-                    border-top-right-radius: 50%;
-                    border-top-left-radius: 50%;
-                    border-bottom-right-radius: 50%;
-                    border-bottom-left-radius: 50%;
-                }
-
-                .timeline > li.timeline-inverted > .timeline-panel {
-                    float: right;
-                }
-
-                    .timeline > li.timeline-inverted > .timeline-panel:before {
-                        border-left-width: 0;
-                        border-right-width: 15px;
-                        left: -15px;
-                        right: auto;
-                    }
-
-                    .timeline > li.timeline-inverted > .timeline-panel:after {
-                        border-left-width: 0;
-                        border-right-width: 14px;
-                        left: -14px;
-                        right: auto;
-                    }
-
-        .timeline-badge.primary {
-            background-color: #2e6da4 !important;
-        }
-
-        .timeline-badge.success {
-            background-color: #3f903f !important;
-        }
-
-        .timeline-badge.warning {
-            background-color: #f0ad4e !important;
-        }
-
-        .timeline-badge.danger {
-            background-color: #d9534f !important;
-        }
-
-        .timeline-badge.info {
-            background-color: #5bc0de !important;
-        }
-
-        .timeline-title {
-            margin-top: 0;
-            color: inherit;
-        }
-
-        .timeline-body > p,
-        .timeline-body > ul {
-            margin-bottom: 0;
-        }
-
-            .timeline-body > p + p {
-                margin-top: 5px;
-            }
-
-        @media (max-width: 767px) {
-            ul.timeline:before {
-                left: 40px;
-            }
-
-            ul.timeline > li > .timeline-panel {
-                width: calc(100% - 90px);
-                width: -moz-calc(100% - 90px);
-                width: -webkit-calc(100% - 90px);
-            }
-
-            ul.timeline > li > .timeline-badge {
-                left: 15px;
-                margin-left: 0;
-                top: 16px;
-            }
-
-            ul.timeline > li > .timeline-panel {
-                float: right;
-            }
-
-                ul.timeline > li > .timeline-panel:before {
-                    border-left-width: 0;
-                    border-right-width: 15px;
-                    left: -15px;
-                    right: auto;
-                }
-
-                ul.timeline > li > .timeline-panel:after {
-                    border-left-width: 0;
-                    border-right-width: 14px;
-                    left: -14px;
-                    right: auto;
-                }
-        }
-#map
-{width:800px;height:580px;margin:auto;
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
+  position: relative;
 }
 
+.timeline:before {
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  content: " ";
+  width: 3px;
+  background-color: #eeeeee;
+  left: 50%;
+  margin-left: -1.5px;
+}
+
+.timeline > li {
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li > .timeline-panel {
+  width: 46%;
+  float: left;
+  border: 1px solid #d4d4d4;
+  border-radius: 2px;
+  padding: 20px;
+  position: relative;
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.timeline > li > .timeline-panel:before {
+  position: absolute;
+  top: 26px;
+  right: -15px;
+  display: inline-block;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-panel:after {
+  position: absolute;
+  top: 27px;
+  right: -14px;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid #fff;
+  border-right: 0 solid #fff;
+  border-bottom: 14px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-badge {
+  border:3px solid white;
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  margin-left: -25px;
+  background-color: #999999;
+  z-index: 100;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -14px;
+  right: auto;
+}
+
+.timeline-badge.primary {
+  background-color: #2e6da4 !important;
+}
+
+.timeline-badge.success {
+  background-color: #3f903f !important;
+}
+
+.timeline-badge.warning {
+  background-color: #f0ad4e !important;
+}
+
+.timeline-badge.danger {
+  background-color: #d9534f !important;
+}
+
+.timeline-badge.info {
+  background-color: #5bc0de !important;
+}
+
+.timeline-title {
+  margin-top: 0;
+  color: inherit;
+}
+
+.timeline-body > p,
+.timeline-body > ul {
+  margin-bottom: 0;
+}
+
+.timeline-body > p + p {
+  margin-top: 5px;
+}
+
+@media (max-width: 767px) {
+  ul.timeline:before {
+    left: 40px;
+  }
+
+  ul.timeline > li > .timeline-panel {
+    width: calc(100% - 90px);
+    width: -moz-calc(100% - 90px);
+    width: -webkit-calc(100% - 90px);
+  }
+
+  ul.timeline > li > .timeline-badge {
+    left: 15px;
+    margin-left: 0;
+    top: 16px;
+  }
+
+  ul.timeline > li > .timeline-panel {
+    float: right;
+  }
+
+  ul.timeline > li > .timeline-panel:before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+  }
+
+  ul.timeline > li > .timeline-panel:after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
+  }
+}
+#page-wrapper .row .col-md-6 .titlearea {
+  color: #ffffff;
+}
+
+#page-wrapper .row .meteo {
+  /* padding-top: 10px; */
+  border: 1px solid #012579;
+  border-radius: 5px;
+  background: url("http://static.bfmtv.com/ressources/img/meteo/fond_beau-temps.jpg");
+  min-height: 200px;
+  max-height: 200px;
+}
+
+#page-wrapper .row .search select {
+  display: block;
+  width: 100%;
+  height: 38px;
+  padding: 8px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #04287e;
+  background-color: #ffffff;
+  background-image: none;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+
+
+#page-wrapper .row #zone_meteo {
+  margin: 5px;
+}
+#page-wrapper .row #zone_meteo #ville,
+#page-wrapper .row #zone_meteo #temperature {
+  font-size: 20px;
+  color: #fff;
+}
+#page-wrapper .row #zone_meteo #temperature {
+  font-weight: bold;
+}
+#page-wrapper .row #zone_meteo #humidite,
+#page-wrapper .row #zone_meteo #vent{
+  font-size: 16px;
+}
+
+#page-wrapper .row .news {
+  /* padding-top: 10px; */
+  border: 1px solid #BC282D;
+  border-radius: 5px;
+  background: url("http://fedoforg.org/wp-content/uploads/2016/10/01.jpg");
+  min-height: 200px;
+  max-height: 200px;
+}
+#page-wrapper .row .news .titlearea {
+  color: black;
+}
+
+#page-wrapper .row .news .item {
+  /* display: block; */
+  margin: 0 65px 0 85px;
+  height: 100px;
+}
+#page-wrapper .row .news .item.active {
+  /* display: block; */
+  margin: 0 65px 0 85px;
+  height: 100px;
+}
+#page-wrapper .row .news .item .title {
+  font-size: 20px;
+  text-decoration: underline;
+}
+#page-wrapper .row .news .item .desc,
+#page-wrapper .row .news .item .title{
+  display: none;
+}
+#page-wrapper .row .news .item.active .desc,
+#page-wrapper .row .news .item.active .title{
+  display: block;
+}
