Ajout page profil

--- a/src/main/webapp/resources/css/local.css
+++ b/src/main/webapp/resources/css/local.css
@@ -2526,7 +2526,7 @@ table.tablesorter thead tr th:hover {
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.panel-default > .panel-heading{
+.ratp .panel-default > .panel-heading{
   background-color: white;
   border: none;
 }
