--- a/src/main/webapp/resources/css/profil.css
+++ b/src/main/webapp/resources/css/profil.css
@@ -6,56 +6,13 @@
  * General styles
  */
 
-body, html{height: 100%; background-repeat: no-repeat; font-family: 'Oxygen', sans-serif; }
-.main{margin-top: 70px; }
-h1.title {font-size: 50px; font-family: 'Passion One', cursive; font-weight: 400; } 
-hr{width: 10%; color: #fff; }
-.form-group{margin-bottom: 15px; }
-label{margin-bottom: 15px; }
-input, input::-webkit-input-placeholder {font-size: 11px; padding-top: 3px; }
-.main-login{background-color: #fff; /* shadows and rounded borders */ -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); }
-.main-center{margin-top: 30px; margin: 0 auto; max-width: 330px; padding: 40px 40px; }
-.login-button, .login-button:active,.login-button:focus{margin-top: 5px; background-color: deeppink; border-color: deeppink; color: white; }
-.login-button:hover{background-color: pink; border-color: pink; color: white; }
-.login-register{font-size: 11px; text-align: center; }
 
 @import url(http://weloveiconfonts.com/api/?family=brandico|entypo|openwebicons|zocial);
 
-/* brandico */
-[class*="brandico-"]:before {font-family: 'brandico', sans-serif; }
-/* entypo */
-[class*="entypo-"]:before {font-family: 'entypo', sans-serif; }
-/* openwebicons */
-[class*="openwebicons-"]:before {font-family: 'OpenWeb Icons', sans-serif; }
-/* zocial */
-[class*="zocial-"]:before {font-family: 'zocial', sans-serif; }
-
-.form-signin{max-width: 100%; padding: 15px; margin: 0 auto; }
-.login-input {margin-bottom: -1px; border-bottom-left-radius: 0; border-bottom-right-radius: 0; } 
-.login-input-pass {margin-bottom: 10px; border-top-left-radius: 0; border-top-right-radius: 0; }
-.signup-input {margin-bottom: -1px; border-bottom-left-radius: 0; border-bottom-right-radius: 0; }
-.signup-input-confirm {margin-bottom: 10px; border-top-left-radius: 0; border-top-right-radius: 0; }
-.create-account {text-align: center; width: 100%; display: block; }
-.form-signin .form-control {position: relative; font-size: 16px; height: auto; padding: 10px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-.btn-center{width: 50%; text-align: center; margin: inherit; }
-.social-login-btn {margin: 5px; width: 60%; font-size: 250%; padding: 5px; }
-.social-login-btn .textspan{font-size: 20px; display: block; height: 34px; line-height: 34px; }
-.social-login-btn i.fa.fa-facebook ,
-.social-login-btn i.fa.fa-google-plus 
-{float: left; }
 
 .social-login-more {width: 45%; }
 
-/*page de connexion*/
-.social-google {background-color: #da573b; border-color: #be5238; }
-.social-google:hover{background-color: #be5238; border-color: #9b4631; }
-.social-facebook {background-color: #4c699e; border-color: #47618d; }
-.social-facebook:hover {background-color: #47618d; border-color: #3c5173; }
-
- #page-content-wrapper {margin: 50px 15px 0; }
-.btn-default:active, .open>.dropdown-toggle.btn-default{background-color: transparent;border-width: 0px}
-
-.dropdown-toggle, .dropdown-menu { width: 300px }
+.divImage .dropdown-toggle, .dropdown-menu,.divColor .dropdown-toggle, .dropdown-menu { width: 300px }
 .btn-group img { margin: auto }
 .btn-group .dropdown-toggle { padding-right: 50px }
 
